# cargo-deb-arm

./: Dockerfile  README.md  action.yml  entry.sh
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  test.yml  test_and_publish.yml  update.yml
docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.armv7-unknown-linux-gnueabihf
test/hello_world/: Cargo.toml
